--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="add_todo_item">Добавить дело</string>
     <string name="main">Main</string>
     <string name="todoItemsTitle">Мои дела</string>
-    <string name="todoItemsSubtitle">Выполнено — 5</string>
+    <string name="todoItemsSubtitle">Выполнено — </string>
     <string name="addTodoItemSave">Сохранить</string>
     <string name="addTodoItemEditTextHint">Что надо сделать…</string>
     <string name="addTodoItemPriorityTitle">Важность</string>
